Split the struct and the main method into new translation units and a header. THE PROJECT DOES NOT COMPILE AS OF NOW.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.0)
 project(ProjectEulerProblem)
 
+# Benchmark Project
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libgcc -static-libstdc++")
 
-add_executable(ProjectEulerProblem Src/Main.cpp)
+add_executable(ProjectEulerProblem src/Main.cpp src/impl/Benchmark.cpp)
+
+target_link_directories(ProjectEulerProblem PUBLIC src/include)
