Now on MSVC. Also finished locking.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,5 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(ProjectEulerProblem src/Main.cpp src/impl/Benchmark.cpp)
 
 target_link_directories(ProjectEulerProblem PUBLIC src/include)
+
+target_link_libraries(ProjectEulerProblem PUBLIC -static-libstdc++ -static-libgcc)
