--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.0)
-project(ProjectEulerProblem)
+project(CollatzConjBenchmark)
 
 # Benchmark Project
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(ProjectEulerProblem src/Main.cpp src/impl/Benchmark.cpp)
+add_executable(CollatzConjBenchmark src/Main.cpp src/impl/Benchmark.cpp)
 
-target_link_directories(ProjectEulerProblem PUBLIC src/include)
+target_link_directories(CollatzConjBenchmark PUBLIC src/include)
 
-target_link_libraries(ProjectEulerProblem PUBLIC -static-libstdc++ -static-libgcc)
+target_link_libraries(CollatzConjBenchmark PUBLIC -static-libstdc++ -static-libgcc)
