--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(CollatzConjBenchmark src/Main.cpp src/impl/Benchmark.cpp)
 
-target_link_libraries(CollatzConjBenchmark PUBLIC -static-libstdc++ -static-libgcc winpthread)
+target_link_libraries(CollatzConjBenchmark PUBLIC winpthread)
