--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(CollatzConjBenchmark src/Main.cpp src/impl/Benchmark.cpp)
 
+target_include_directories(CollatzConjBenchmark PUBLIC src/include)
 target_compile_options(CollatzConjBenchmark PUBLIC -Wall -Werror -O2)
 
 target_link_libraries(CollatzConjBenchmark PUBLIC pthread)
